Bug 958949 - Save return value for generator function into local variable before running finally-block. r=jandem